header alignment issues, fetch icon errors in createshipment

--- a/cra-frontend/src/shared/header/style.scss
+++ b/cra-frontend/src/shared/header/style.scss
@@ -86,8 +86,7 @@
       width: 400px;
       position: relative;
       top: 45px;
-      right: 30rem;
-      //left: unset;
+      right: 32rem;
       display: block;
 
       @media screen and (max-width: 768px) {
